dataset1235/2025-2/610742602/users/4180041627/executions/906907063_2149359571.log
== RUN (2025-08-19 20:54:24)
-- CODE: 
PRINT(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:23)
-- CODE: 
PRINT(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:52)
-- CODE: 
print(90-55)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:53:54)
-- CODE: 
PRINT(90-55)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:02)
-- CODE: 
PRINT(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 20:54:03)
-- CODE: 
PRINT(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    PRINT(90-55)
    ^^^^^
NameError: name 'PRINT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 20:54:50)
-- CODE: 
print(90-55)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
